--- a/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/bills.html
+++ b/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/bills.html
@@ -40,23 +40,30 @@
 <script>
     // Initialize Firebase
     var config = {
-        apiKey: "AIzaSyDKgCh5vwQBiNSjxS2YHCGCLZfr0YlAvgA",
-        authDomain: "ez-ebanking-test.firebaseapp.com",
-        databaseURL: "https://ez-ebanking-test.firebaseio.com",
-        projectId: "ez-ebanking-test",
+        apiKey: "AIzaSyAfFE2Kr7u_vyq_oSSrb_9gdwJ_xiFXpLE",
+        authDomain: "design-thinking-assignment.firebaseapp.com",
+        databaseURL: "https://design-thinking-assignment.firebaseio.com",
+        projectId: "design-thinking-assignment",
         storageBucket: "",
-        messagingSenderId: "546739130662"
+        messagingSenderId: "758596598031"
     };
     firebase.initializeApp(config);
 
     var bank_bal_1 = document.getElementById('bank_bal_1');
-    var dbRef_1 = firebase.database().ref().child('savings');
+    var dbRef_1 = firebase.database().ref().child('Savings');
     dbRef_1.on('value', snap => bank_bal_1.innerText = snap.val());
 
     var bank_bal_2 = document.getElementById('bank_bal_2');
     var dbRef_2 = firebase.database().ref().child('current');
     dbRef_2.on('value', snap => bank_bal_2.innerText = snap.val());
 
+    var record_money_1 = document.getElementById('record_money_1');
+    var dbRef_3 = firebase.database().ref().child('record_money');
+    dbRef_3.on('value', snap => record_money_1.innerText = snap.val());
+
+    var record_date_1 = document.getElementById('record_date_1');
+    var dbRef_4 = firebase.database().ref().child('record_date');
+    dbRef_4.on('value', snap => record_date_1.innerText = snap.val());
 </script>
 
     {% endblock %}
