--- a/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/transfer.html
+++ b/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/transfer.html
@@ -57,11 +57,19 @@
     dbRef_2.on('value', snap => bank_bal_2.innerText = snap.val());
 
     var record_money_1 = document.getElementById('record_money_1');
-    var dbRef_3 = firebase.database().ref().child('record_money');
+    var dbRef_3 = firebase.database().ref().child('record_money').child('money_1');
     dbRef_3.on('value', snap => record_money_1.innerText = snap.val());
 
     var record_date_1 = document.getElementById('record_date_1');
-    var dbRef_4 = firebase.database().ref().child('record_date');
+    var dbRef_4 = firebase.database().ref().child('record_date').child('date_1');
     dbRef_4.on('value', snap => record_date_1.innerText = snap.val());
+
+    var record_money_2 = document.getElementById('record_money_2');
+    var dbRef_5 = firebase.database().ref().child('record_money').child('money_2');
+    dbRef_5.on('value', snap => record_money_2.innerText = snap.val());
+
+    var record_date_2 = document.getElementById('record_date_2');
+    var dbRef_6 = firebase.database().ref().child('record_date').child('date_2');
+    dbRef_6.on('value', snap => record_date_2.innerText = snap.val());
 </script>
     {% endblock %}
