--- a/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/bills.html
+++ b/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/bills.html
@@ -27,10 +27,8 @@
 
 
 <table align="center">
-    <tr><td><b>Bill Number: </b></td><td style="padding-left:10px"><input type="text" required id="bill_no" /></td></tr>
+    <tr><td><b>Amount Paid: </b></td><td style="padding-left:10px"><input type="text" required id="bill_no" /></td></tr>
     <tr><td style="padding: 10px"></td></tr>
-    <tr><td><b>Amount Payable: </b></td><td style="padding-left:10px"> $XXX.XX</td></tr>
-    <tr><td><b>Payment Due: </b></td><td style="padding-left:10px"> 17/12/2017</td></tr>
 </table>
 
 <p style="padding:10px"></p>
@@ -82,6 +80,7 @@
         firebase.database().ref().update({
             "Savings": balance
         });
+
     }
 
 </script>
