--- a/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/transfer.html
+++ b/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/transfer.html
@@ -32,7 +32,7 @@
     <tr><td style="padding: 10px"></td></tr>
 </table>
 <p style="padding:10px"></p>
-<p style="text-align:center"><input type="submit" value="Confirm" /></p>
+<p style="text-align:center"><button id="confirmButton" onclick="transfer()">Confirm</button></p>
 
 
 <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
@@ -71,5 +71,16 @@
     var record_date_2 = document.getElementById('record_date_2');
     var dbRef_6 = firebase.database().ref().child('record_date').child('date_2');
     dbRef_6.on('value', snap => record_date_2.innerText = snap.val());
+
+    function transfer() {
+        var tranfer = document.getElementById('amount_to_pay').value;
+        var balance = bank_bal_1.innerText - tranfer
+
+        firebase.database().ref().update({
+            "Savings": balance
+        });
+
+    }
+
 </script>
     {% endblock %}
