--- a/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/index.html
+++ b/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/index.html
@@ -60,16 +60,7 @@
         <h2>Transaction History</h2>
 
         <table align="center" style="border:1px solid black; background-color: purple; text-align:left; color:gold">
-            <tr><td style="border-right:1px solid black; padding-right:10px">01/03/2016: </td><td style="padding-left:30px; padding-right:30px"> Deposited $250,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">24/05/2016 </td><td style="padding-left:30px; padding-right:30px"> Deposited $250,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">04/06/2016: </td><td style="padding-left:30px; padding-right:30px"> Withdrew $150,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">18/09/2016: </td><td style="padding-left:30px; padding-right:30px"> Withdrew $50,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">24/10/2016 </td><td style="padding-left:30px; padding-right:30px"> Deposited $750,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">11/02/2017: </td><td style="padding-left:30px; padding-right:30px"> Deposited $300,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">30/04/2017 </td><td style="padding-left:30px; padding-right:30px"> Withdrew $150,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">07/06/2017: </td><td style="padding-left:30px; padding-right:30px"> Deposited $250,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">23/09/2017: </td><td style="padding-left:30px; padding-right:30px"> Deposited $250,000</td></tr>
-            <tr><td style="border-right:1px solid black; padding-right:10px">08/10/2017: </td><td style="padding-left:30px; padding-right:30px"> Withdrew $350,000</td></tr>
+            <tr><td id="transacted_date" style="border-right:1px solid black; padding-right:10px"></td><td id="transacted_amount" style="padding-left:30px; padding-right:30px"></td></tr>
         </table>
     </div>
 </div>
@@ -103,6 +94,12 @@
     var transaction_date = document.getElementById('transaction_history');
     var dbRef_4 = firebase.database().ref().child('transaction').child('date');
     dbRef_4.on('value', snap => date.innerText = snap.val());
+
+    function updateTransactionHistory() {
+        var getTransactionDate = firebase.database().ref('transaction_history').child('transaction').child('date');
+        var getTransactionAmount = firebase.database().ref('transaction_history').child('transaction').child('date');
+        var
+    }
 
 </script>
 
