--- a/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/index.html
+++ b/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/index.html
@@ -59,10 +59,8 @@
     <div style="text-align:center">
         <h2>Transaction History</h2>
 
-        <table align="center" style="border:1px solid black; background-color: purple; text-align:left; color:gold">
-            <tr><td id="record_date_1" style="border-right:1px solid black; padding-right:10px"></td><td id="record_money_1" style="padding-left:30px; padding-right:30px"></td></tr>
-            <tr><td id="record_date_2" style="border-right:1px solid black; padding-right:10px"></td><td id="record_money_2" style="padding-left:30px; padding-right:30px"></td></tr>
-        </table>
+        <table align="center" id="transaction-table" style="border:1px solid black; background-color: purple; text-align:left; color:gold">
+         </table>
     </div>
 </div>
 
@@ -87,21 +85,19 @@
     var dbRef_2 = firebase.database().ref().child('current');
     dbRef_2.on('value', snap => bank_bal_2.innerText = snap.val());
 
-    var record_money_1 = document.getElementById('record_money_1');
-    var dbRef_3 = firebase.database().ref().child('record_money').child('money_1');
-    dbRef_3.on('value', snap => record_money_1.innerText = snap.val());
-
-    var record_date_1 = document.getElementById('record_date_1');
-    var dbRef_4 = firebase.database().ref().child('record_date').child('date_1');
-    dbRef_4.on('value', snap => record_date_1.innerText = snap.val());
-
-    var record_money_2 = document.getElementById('record_money_2');
-    var dbRef_5 = firebase.database().ref().child('record_money').child('money_2');
-    dbRef_5.on('value', snap => record_money_2.innerText = snap.val());
-
-    var record_date_2 = document.getElementById('record_date_2');
-    var dbRef_6 = firebase.database().ref().child('record_date').child('date_2');
-    dbRef_6.on('value', snap => record_date_2.innerText = snap.val());
+    // transaction history table link to Firebase database
+    console.log('test_transaction')
+    test_transaction = firebase.database().ref('test_transaction').once('value').then(snapshot => {
+        console.log('snapshot.val()')
+        console.log()
+        transaction_records = snapshot.val();
+        Object.keys(transaction_records).forEach(key => {
+            console.log(transaction_records[key])
+            table_row = '<tr><td>' + transaction_records[key].amount + '<td><td>' + transaction_records[key].date +
+                '</td>';
+            $('#transaction-table').append(table_row)
+        })
+    })
 
 </script>
 
