--- a/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/index.html
+++ b/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/index.html
@@ -60,6 +60,7 @@
         <h2>Transaction History</h2>
 
         <table align="center" id="transaction-table" style="border:1px solid black; background-color: purple; text-align:left; color:gold">
+            <tr><td style="font-weight: bold">Type: </td><td style="font-weight: bold">Date: </td><td></td><td style="font-weight: bold">Amount: </td></tr>
          </table>
     </div>
 </div>
@@ -93,7 +94,8 @@
         transaction_records = snapshot.val();
         Object.keys(transaction_records).forEach(key => {
             console.log(transaction_records[key])
-            table_row = '<tr><td>' + transaction_records[key].amount + '<td><td>' + transaction_records[key].date +
+            table_row = '<tr><td>' + transaction_records[key].type +
+                '</td><td>' + transaction_records[key].amount + '<td><td>' + transaction_records[key].date +
                 '</td>';
             $('#transaction-table').append(table_row)
         })
