Final Commit Change last looks

--- a/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/transfer.html
+++ b/MobileBankingSolutionDraft/MobileBankingSolutionDraft/templates/transfer.html
@@ -20,8 +20,9 @@
 <p style="padding:10px"></p>
 <table align="center">
     <tr><td><b>Your Bank: </b></td><td style="padding-left:10px"> United Overseas Bank</td></tr>
-    <tr><td><b>Savings Account: </b></td><td id="bank_bal_1" style="text-align:center; font-size: 24px; font-weight: bold"></td></tr>
+
 </table>
+<table align="center"><tr><td><b>Savings Account: </b></td><td id="acc-amt">$</td><td id="bank_bal_1" style="text-align:center; font-size: 24px; font-weight: bold"></td></tr></table>
 <hr />
 
 
